iac-aws-scripts/cicd-aws/vpc.tf
locals {
  az     = ["a", "b"]
  subnet = "${aws_subnet.subnet.0.id}"
}

resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_subnet" "subnet" {
  count             = 2
  vpc_id            = "${aws_vpc.vpc.id}"
  cidr_block        = "${cidrsubnet(aws_vpc.vpc.cidr_block, 8, count.index)}"
  availability_zone = "${var.region}${element(local.az, count.index)}"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.vpc.id}"
}

data "aws_route_table" "table" {
  vpc_id = "${aws_vpc.vpc.id}"
}

resource "aws_route" "route" {
  route_table_id         = "${data.aws_route_table.table.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.gw.id}"
}
